--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.59.8",
     "react-native-material-kit": "^0.5.1",
     "react-native-router-flux": "^4.0.6",
+    "react-native-vector-icons": "^6.4.2",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0"
