--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.4.0",
     "axios": "^0.18.0",
+    "qs": "^6.7.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-material-kit": "^0.5.1",
+    "react-native-phone-input": "^0.2.1",
     "react-native-router-flux": "^4.0.6",
+    "react-native-secure-key-store": "^2.0.2",
     "react-native-vector-icons": "^6.4.2",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
