--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-awesome-alerts": "^1.2.0",
+    "react-native-confirmation-code-input": "^1.0.4",
     "react-native-material-kit": "^0.5.1",
     "react-native-phone-input": "^0.2.1",
     "react-native-router-flux": "^4.0.6",
