--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-vector-icons": "^6.4.2",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
-    "redux-persist": "^5.10.0"
+    "redux-persist": "^5.10.0",
+    "tweetnacl": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
