--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
-    "tweetnacl": "^1.0.1"
+    "tweetnacl": "^1.0.1",
+    "tweetnacl-util": "^0.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
