--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.4.0",
+    "arraybuffer-to-string": "^1.0.2",
     "axios": "^0.18.0",
+    "buffer": "^5.2.1",
     "qs": "^6.7.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
@@ -25,8 +27,7 @@
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
-    "tweetnacl": "^1.0.1",
-    "tweetnacl-util": "^0.15.0"
+    "tweetnacl": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
