--- a/package.json
+++ b/package.json
@@ -8,35 +8,35 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.4.0",
+    "@react-native-community/async-storage": "^1.6.1",
     "arraybuffer-to-string": "^1.0.2",
-    "axios": "^0.18.0",
-    "buffer": "^5.2.1",
-    "qs": "^6.7.0",
-    "react": "16.8.3",
-    "react-native": "0.59.8",
+    "axios": "^0.19.0",
+    "buffer": "^5.4.2",
+    "qs": "^6.8.0",
+    "react": "^16.9.0",
+    "react-native": "^0.60.5",
     "react-native-awesome-alerts": "^1.2.0",
-    "react-native-device-info": "^2.0.0",
+    "react-native-device-info": "^2.3.2",
     "react-native-material-kit": "^0.5.1",
-    "react-native-phone-input": "^0.2.1",
-    "react-native-root-toast": "^3.0.2",
+    "react-native-phone-input": "^0.2.4",
+    "react-native-root-toast": "^3.1.2",
     "react-native-router-flux": "^4.0.6",
-    "react-native-secure-key-store": "^2.0.2",
-    "react-native-smooth-pincode-input": "^1.0.3",
-    "react-native-vector-icons": "^6.4.2",
-    "react-redux": "^7.0.3",
-    "redux": "^4.0.1",
-    "redux-persist": "^5.10.0",
+    "react-native-secure-key-store": "^2.0.4",
+    "react-native-smooth-pincode-input": "^1.0.7",
+    "react-native-vector-icons": "^6.6.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
     "tweetnacl": "^1.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/runtime": "^7.4.4",
-    "babel-jest": "^24.8.0",
-    "flow-bin": "^0.98.1",
-    "jest": "^24.8.0",
-    "metro-react-native-babel-preset": "^0.54.0",
-    "react-test-renderer": "16.8.3"
+    "@babel/core": "^7.6.0",
+    "@babel/runtime": "^7.6.0",
+    "babel-jest": "^24.9.0",
+    "flow-bin": "^0.107.0",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react-test-renderer": "^16.9.0"
   },
   "jest": {
     "preset": "react-native"
